3.9/release-notes.md
---
layout: default
description: For a high level list of changes, please refer to one of the following sections
---
Release Notes
=============

What's New
----------

For a high level list of changes, please refer to one of the following sections:

- What's New in 3.x:
  [3.9](release-notes-new-features39.html),
  [3.8](release-notes-new-features38.html),
  [3.7](release-notes-new-features37.html),
  [3.6](release-notes-new-features36.html),
  [3.5](release-notes-new-features35.html),
  [3.4](release-notes-new-features34.html),
  [3.3](release-notes-new-features33.html),
  [3.2](release-notes-new-features32.html),
  [3.1](release-notes-new-features31.html),
  [3.0](release-notes-new-features30.html)
- What's New in 2.x:
  [2.8](release-notes-new-features28.html),
  [2.7](release-notes-new-features27.html),
  [2.6](release-notes-new-features26.html),
  [2.5](release-notes-new-features25.html),
  [2.4](release-notes-new-features24.html),
  [2.3](release-notes-new-features23.html),
  [2.2](release-notes-new-features22.html),
  [2.1](release-notes-new-features21.html)

Changelogs
----------

For a detailed list of changes to the ArangoDB core programs and tools,
please refer to the version specific changelogs:

- Changelogs 3.x:
  [3.9](https://raw.githubusercontent.com/arangodb/arangodb/3.9/CHANGELOG){:target="_blank"},
  [3.8](https://raw.githubusercontent.com/arangodb/arangodb/3.8/CHANGELOG){:target="_blank"},
  [3.7](https://raw.githubusercontent.com/arangodb/arangodb/3.7/CHANGELOG){:target="_blank"},
  [3.6](https://raw.githubusercontent.com/arangodb/arangodb/3.6/CHANGELOG){:target="_blank"},
  [3.5](https://raw.githubusercontent.com/arangodb/arangodb/3.5/CHANGELOG){:target="_blank"},
  [3.4](https://raw.githubusercontent.com/arangodb/arangodb/3.4/CHANGELOG){:target="_blank"},
  [3.3](https://raw.githubusercontent.com/arangodb/arangodb/3.3/CHANGELOG){:target="_blank"},
  [3.2](https://raw.githubusercontent.com/arangodb/arangodb/3.2/CHANGELOG){:target="_blank"},
  [3.1](https://raw.githubusercontent.com/arangodb/arangodb/3.1/CHANGELOG){:target="_blank"},
  [3.0](https://raw.githubusercontent.com/arangodb/arangodb/3.0/CHANGELOG){:target="_blank"}
- Changelogs 2.x:
  [2.8](https://raw.githubusercontent.com/arangodb/arangodb/2.8/CHANGELOG){:target="_blank"},
  [2.7](https://raw.githubusercontent.com/arangodb/arangodb/2.7/CHANGELOG){:target="_blank"},
  [2.6](https://raw.githubusercontent.com/arangodb/arangodb/2.6/CHANGELOG){:target="_blank"},
  [2.5](https://raw.githubusercontent.com/arangodb/arangodb/2.5/CHANGELOG){:target="_blank"},
  [2.4](https://raw.githubusercontent.com/arangodb/arangodb/2.4/CHANGELOG){:target="_blank"},
  [2.3](https://raw.githubusercontent.com/arangodb/arangodb/2.3/CHANGELOG){:target="_blank"},
  [2.2](https://raw.githubusercontent.com/arangodb/arangodb/2.2/CHANGELOG){:target="_blank"},
  [2.1](https://raw.githubusercontent.com/arangodb/arangodb/2.1/CHANGELOG){:target="_blank"}

Additional changelogs for tools not included in the main repository:

- [ArangoDB Starter](https://github.com/arangodb-helper/arangodb/blob/master/CHANGELOG.md){:target="_blank"}
- [Foxx CLI](https://github.com/arangodb/foxx-cli/blob/main/CHANGELOG.md){:target="_blank"}
- [kube-arangodb](https://github.com/arangodb/kube-arangodb/blob/master/CHANGELOG.md){:target="_blank"}

Incompatible changes
--------------------

For a list of incompatible changes, please refer to one of the following sections.

- Incompatible changes in 3.x:
  [3.9](release-notes-upgrading-changes39.html),
  [3.8](release-notes-upgrading-changes38.html),
  [3.7](release-notes-upgrading-changes37.html),
  [3.6](release-notes-upgrading-changes36.html),
  [3.5](release-notes-upgrading-changes35.html),
  [3.4](release-notes-upgrading-changes34.html),
  [3.3](release-notes-upgrading-changes33.html),
  [3.2](release-notes-upgrading-changes32.html),
  [3.1](release-notes-upgrading-changes31.html),
  [3.0](release-notes-upgrading-changes30.html)
- Incompatible changes in 2.x:
  [2.8](release-notes-upgrading-changes28.html),
  [2.7](release-notes-upgrading-changes27.html),
  [2.6](release-notes-upgrading-changes26.html),
  [2.5](release-notes-upgrading-changes25.html),
  [2.4](release-notes-upgrading-changes24.html),
  [2.3](release-notes-upgrading-changes23.html)

API Changes
-----------

For an overview of changes to ArangoDB's interfaces, have a look at below
sections. The HTTP API part is especially relevant for driver maintainers.

- API Changes in 3.x:
  [3.9](release-notes-api-changes39.html),
  [3.8](release-notes-api-changes38.html),
  [3.7](release-notes-api-changes37.html)

Known Issues
------------

For a list of known issues, please refer to one of the following sections:

- Known Issues in 3.x:
  [3.9](release-notes-known-issues39.html),
  [3.8](release-notes-known-issues38.html),
  [3.7](release-notes-known-issues37.html),
  [3.6](release-notes-known-issues36.html),
  [3.5](release-notes-known-issues35.html),
  [3.4](release-notes-known-issues34.html),
  [3.3](release-notes-known-issues33.html),
  [3.2](release-notes-known-issues32.html)
